--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nivo/line": "^0.83.0",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.9.2",
     "bootstrap": "^5.3.2",
