--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nivo/line": "^0.83.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@sweetalert2/theme-borderless": "^5.0.15",
     "antd": "^5.9.2",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.4",
@@ -25,7 +26,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "redux-persist": "^6.0.0",
-    "sweetalert2": "^11.7.28"
+    "sweetalert2": "^11.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
