--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nivo/line": "^0.83.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-table": "^8.10.7",
     "antd": "^5.9.2",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.4",
