--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
