--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-loading-skeleton": "^3.3.1",
+    "react-multi-select-component": "^4.3.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "redux-persist": "^6.0.0",
